--- a/.github/workflows/update-rss.yml
+++ b/.github/workflows/update-rss.yml
@@ -2,8 +2,8 @@ name: Update RSS Feed
 
 on:
   schedule:
-    # Run every 30 minutes
-    - cron: '*/30 * * * *'
+    # Run once per day at 6:00 AM UTC
+    - cron: '0 6 * * *'
   workflow_dispatch:  # Allows manual trigger
 
 jobs:
