Convert RSS XML to JSON feed format

--- a/.github/workflows/update-rss.yml
+++ b/.github/workflows/update-rss.yml
@@ -36,6 +36,6 @@ jobs:
       run: |
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
-        git add rss_feed.xml
-        git diff --staged --quiet || git commit -m "Auto-update RSS feed $(date)"
+        git add rss_feed.json
+        git diff --staged --quiet || git commit -m "Auto-update JSON feed $(date)"
         git push
