--- a/.github/workflows/update-rss.yml
+++ b/.github/workflows/update-rss.yml
@@ -28,6 +28,7 @@ jobs:
       env:
         API_ID: ${{ secrets.API_ID }}
         API_HASH: ${{ secrets.API_HASH }}
+        BOT_TOKEN: ${{ secrets.BOT_TOKEN }}
         CHANNEL_USERNAME: ${{ secrets.CHANNEL_USERNAME }}
       run: |
         python rss_telegram.py
